log-message-processor/k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-message-processor
  namespace: team16
  labels:
    app: log-message-processor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-message-processor
  template:
    metadata:
      labels:
        app: log-message-processor
    spec:
      containers:
      - env:
        - name: REDIS_HOST
          valueFrom:
            configMapKeyRef:
              name: log-message-processor
              key: REDIS_HOST
        - name: REDIS_PORT
          valueFrom:
            configMapKeyRef:
              name: log-message-processor
              key: REDIS_PORT
        - name: REDIS_CHANNEL
          valueFrom:
            configMapKeyRef:
              name: log-message-processor
              key: REDIS_CHANNEL
        name: log-message-processor
        image: 561341012850.dkr.ecr.us-east-1.amazonaws.com/team16-log-message-processor
        imagePullPolicy: Always
      restartPolicy: Always
